--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "typescript": "^5.6.2"
+    }
 }
