--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "scripts": {
         "build": "npx tsc",
-        "start": "node ./src/index.js",
+        "start": "node ./dist/index.js",
         "test": "echo \"TODO\" && exit 1"
     },
     "type": "module"
