set module to NodeNext and added import extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "allowJs": true,
+        "module": "NodeNext",
         "noImplicitAny": true,
         "outDir": "./dist",
         "skipLibCheck": true,
