fix main in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "devDependencies": {
         "typescript": "^5.6.2"
     },
-    "main": "index.js",
+    "main": "dist/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/jordanpatton/shutter-cli.git"
